--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 <body>
     <h1 id="title">DRUM KIT</h1>
     <div id="drum-set">
-        <div id="part-1">A<img src="/images/drum-1.png" alt="Drums" id="drum-1"></div>
-        <div id="part-2">S<img src="/images/drum-2.png" alt="Drums" id="drum-2"></div>
-        <div id="part-3">D<img src="/images/drum-3.png" alt="Drums" id="drum-3"></div>
-        <div id="part-4">F<img src="/images/drum-4.png" alt="Drums" id="drum-4"></div>
-        <div id="part-5">J<img src="/images/drum-5.png" alt="Drums" id="drum-5"></div>
-        <div id="part-6">K<img src="/images/drum-6.png" alt="Drums" id="drum-6"></div>
-        <div id="part-7">L<img src="/images/drum-7.png" alt="Drums" id="drum-7"></div>
+        <button id="part-1">A<img src="/images/drum-1.png" alt="Drums" id="drum-1"></button>
+        <button id="part-2">S<img src="/images/drum-2.png" alt="Drums" id="drum-2"></button>
+        <button id="part-3">D<img src="/images/drum-3.png" alt="Drums" id="drum-3"></button>
+        <button id="part-4">F<img src="/images/drum-4.png" alt="Drums" id="drum-4"></button>
+        <button id="part-5">J<img src="/images/drum-5.png" alt="Drums" id="drum-5"></button>
+        <button id="part-6">K<img src="/images/drum-6.png" alt="Drums" id="drum-6"></button>
+        <button id="part-7">L<img src="/images/drum-7.png" alt="Drums" id="drum-7"></button>
     </div>
 </body>
 
